--- a/TraktClient/app/src/main/res/layout/app_bar_main.xml
+++ b/TraktClient/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.eduisters.trakt_client.ui.main_activity.MainActivity">
+    tools:context="com.example.eduisters.trakt_client.ui.activity.main_activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
